--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,10 @@
     "background": {
       "service_worker": "background.js"
     },
+    "action": {
+      "default_icon": "icon.png",
+      "default_title": "Close Inactive Zendesk Tabs"
+    },
     "commands": {
       "close-inactive-tabs": {
         "suggested_key": {
